--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -11,13 +11,28 @@
 </head>
 
 <body>
-    <div class="main noselect">
+    <!-- 开始菜单 -->
+    <div class="startmenu noselect">
+        <div class="img">
+            <img src="/img/wewin.png" alt="">
+        </div>
+        <div class="into-btn">
+            <div class="btn b1">打印机介绍</div>
+            <div class="btn b2">材质介绍</div>
+            <div class="btn b3">标签选型</div>
+        </div>
+        <div class="appaddress">www.wewin.com.cn</div>
+    </div>
+
+     <!-- 标签选型 -->
+    <div class="main noselect"> 
         <div class="questions">
             <div id="q1" class="question q1 active">
+                <div class="backstartmenu">返回主菜单</div>
                 <div class="img">
                     <img src="/img/wewin.png" alt="">
                 </div>
-                <div class="title wordbreak" style="margin-top: 15px">1.打印机型号是什么？</div>
+                <div class="title wordbreak" style="margin-top: 15px">1.您正在使用以下哪一款打印机/您准备采购以下哪一款打印机？</div>
                 <div class="answers bw">
                     <div class="answer a1 q1">
                         <div class="left">A.</div>
@@ -71,6 +86,19 @@
             <div class="title"></div>
             <img src="/img/VQS-02FBL.png" alt="">
         </div>
+    </div>
+
+    <!-- 欢迎界面 -->
+    <div class="appstart noselect">
+        <div class="appmain">
+            <div class="logo">
+                <img src="/img/logo.png" alt="">
+            </div>
+            <div class="slogan">
+                WEWIN<br>让标记更简单
+            </div>
+        </div>
+        <div class="appaddress">www.wewin.com.cn</div>
     </div>
     <script src="/js/main.js"></script>
 </body>
