--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -11,6 +11,20 @@
 </head>
 
 <body>
+
+    <!-- 欢迎界面 -->
+    <div class="appstart noselect">
+        <div class="appmain">
+            <div class="logo">
+                <img src="/img/logo.png" alt="">
+            </div>
+            <div class="slogan">
+                WEWIN<br>让标记更简单
+            </div>
+        </div>
+        <div class="appaddress">www.wewin.com.cn</div>
+    </div>
+
     <!-- 开始菜单 -->
     <div class="startmenu noselect">
         <div class="img">
@@ -23,6 +37,12 @@
         </div>
         <div class="appaddress">www.wewin.com.cn</div>
     </div>
+
+    <!-- 打印机介绍 -->
+    <div class="printer noselect"></div>
+
+    <!-- 材质介绍 -->
+    <div class="material noselect"></div>
 
      <!-- 标签选型 -->
     <div class="main noselect"> 
@@ -86,19 +106,6 @@
             <div class="title"></div>
             <img src="/img/VQS-02FBL.png" alt="">
         </div>
-    </div>
-
-    <!-- 欢迎界面 -->
-    <div class="appstart noselect">
-        <div class="appmain">
-            <div class="logo">
-                <img src="/img/logo.png" alt="">
-            </div>
-            <div class="slogan">
-                WEWIN<br>让标记更简单
-            </div>
-        </div>
-        <div class="appaddress">www.wewin.com.cn</div>
     </div>
     <script src="/js/main.js"></script>
 </body>
