--- a/static/css/main.css
+++ b/static/css/main.css
@@ -371,6 +371,7 @@ html {
     opacity: 10;
     text-align: center;
     animation: into2 0.5s ease-in-out;
+    color: rgb(70, 70, 70);
 }
 
 @keyframes into2 {
@@ -398,13 +399,11 @@ html {
 }
 
 .startmenu {
-    padding-top: 20px;
+    padding-top: 40px;
 }
 
 .into-btn {
     width: 80%;
-    /* margin: 0 auto; */
-    /* padding-top: 20px; */
     position: absolute;
     top: 55%;
     left: 50%;
@@ -453,21 +452,20 @@ html {
 }
 
 .b1 {
-    background-image: linear-gradient(217deg, #4C8CF0 0%, #88B7FF 100%);
-    box-shadow: 0px 2px 10px rgba(76, 140, 240, 0.3);
+    background-image: linear-gradient(210deg, rgb(62, 170, 255) 0%, #61E4FF 100%);
+    box-shadow: 0px 2px 12px rgba(62, 170, 255, 0.5);
     margin-bottom: 30px;
 }
 
 .b2 {
-    background-image: linear-gradient(219deg, #9F98FF 0%, #BEBBFE 100%);
-    box-shadow: 0px 2px 10px rgba(159, 152, 255, 0.3);
+    background-image: linear-gradient(210deg, rgb(254, 73, 143) 0%, #FF86BB 100%);
+    box-shadow: 0px 2px 12px rgba(254, 73, 143, 0.5);
     margin-bottom: 30px;
 }
 
 .b3 {
-    /* background-image: linear-gradient(217deg, #FFC750 0%, #FFDD93 100%); */
-    background-image: linear-gradient(218deg, #06C4FF 0%, #85dbf5 100%);
-    box-shadow: 0px 2px 10px rgba(6, 196, 255, 0.3);
+    background-image: linear-gradient(210deg, rgb(253, 163, 52) 0%, #FFD75B 100%);
+    box-shadow: 0px 2px 12px rgba(253, 163, 52, 0.5);
     margin-bottom: 0;
 }
 
