--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -19,7 +19,8 @@
                 <img src="/img/logo.png" alt="">
             </div>
             <div class="slogan">
-                WEWIN<br>让标记更简单
+                WEWIN
+                <br>让标记更简单
             </div>
         </div>
         <div class="appaddress">www.wewin.com.cn</div>
@@ -39,13 +40,56 @@
     </div>
 
     <!-- 打印机介绍 -->
-    <div class="printer noselect"></div>
+    <div class="printer noselect">
+        <div class="printer-list active">
+            <div class="backstartmenu">返回主菜单</div>
+            <div class="list">
+                <!-- <div class="name">
+                    <div class="left">P30系列手持打印机</div>
+                    <div class="right">
+                        <img src="/img/printer/P30系列.jpg" alt="">
+                    </div>
+                </div> -->
+            </div>
+        </div>
+        <div class="printer-info disactive">
+            <div class="backprinterlist">返回</div>
+            <div class="pinfo">
+                <!-- <div class="title">P30系列手持打印机</div>
+                <div class="nav">
+                    <img src="/img/printer/P30系列.jpg" alt="">
+                </div>
+                <div class="info">
+                    <div class="line">
+                        <b>型号</b>：C20</div>
+                </div> -->
+            </div>
+        </div>
+    </div>
 
     <!-- 材质介绍 -->
-    <div class="material noselect"></div>
+    <div class="material noselect">
+        <div class="material-list active">
+            <div class="backstartmenu">返回主菜单</div>
+            <div class="list">
+                <!-- <div class="name">
+                    <div class="left">PP合成纸（聚丙烯）</div>
+                </div> -->
+            </div>
+        </div>
+        <div class="material-info disactive">
+            <div class="backmateriallist">返回</div>
+            <div class="pinfo">
+                <!-- <div class="title">P30系列手持打印机</div>
+                <div class="info">
+                    <div class="line"><b>型号</b>：C20</div>
+                </div> -->
+            </div>
+        </div>
+    </div>
 
-     <!-- 标签选型 -->
-    <div class="main noselect"> 
+    <!-- 标签选型 -->
+    <div class="main noselect">
         <div class="questions">
             <div id="q1" class="question q1 active">
                 <div class="backstartmenu">返回主菜单</div>
@@ -107,6 +151,7 @@
             <img src="/img/VQS-02FBL.png" alt="">
         </div>
     </div>
+
     <script src="/js/main.js"></script>
 </body>
 
