--- a/static/css/main.css
+++ b/static/css/main.css
@@ -206,6 +206,7 @@ html {
     object-fit: contain;
     border: 1px dashed #ddd;
     transition: all 0.3s;
+    background: rgb(243, 243, 243);
 }
 
 .result .tags .tag img:active {
@@ -214,7 +215,9 @@ html {
 
 .restart,
 .backlast,
-.backstartmenu {
+.backstartmenu,
+.backprinterlist,
+.backmateriallist {
     position: fixed;
     padding: 10px;
     font-size: 1.1rem;
@@ -233,7 +236,9 @@ html {
 }
 
 .backlast,
-.backstartmenu {
+.backstartmenu,
+.backprinterlist,
+.backmateriallist {
     top: 0px;
     left: 0;
     border-bottom: 1px solid rgb(220, 220, 220);
@@ -243,7 +248,9 @@ html {
 
 .restart:active,
 .backlast:active,
-.backstartmenu:active {
+.backstartmenu:active,
+.backprinterlist:active,
+.backmateriallist:active {
     background: rgb(243, 243, 243);
 }
 
@@ -265,6 +272,20 @@ html {
 
 .img img {
     width: 200px;
+}
+
+.startmenu .img img {
+    margin-top: 0;
+    animation: into3 0.3s;
+}
+
+@keyframes into3 {
+    0% {
+        margin-top: -10px;
+    }
+    100% {
+        margin-top: 0;
+    }
 }
 
 .upimg {
@@ -370,7 +391,7 @@ html {
     bottom: 15px;
     opacity: 10;
     text-align: center;
-    animation: into2 0.5s ease-in-out;
+    animation: into2 0.3s;
     color: rgb(70, 70, 70);
 }
 
@@ -388,14 +409,6 @@ html {
 .disable {
     opacity: 0;
     left: -100%;
-}
-
-.active {
-    display: block;
-}
-
-.disactive {
-    display: none;
 }
 
 .startmenu {
@@ -458,17 +471,168 @@ html {
 }
 
 .b2 {
-    background-image: linear-gradient(210deg, rgb(254, 73, 143) 0%, #FF86BB 100%);
-    box-shadow: 0px 2px 12px rgba(254, 73, 143, 0.5);
+    background-image: linear-gradient(210deg, rgb(76, 140, 240) 0%, rgb(136, 183, 255) 100%);
+    box-shadow: 0px 2px 12px rgba(76, 140, 240, 0.5);
     margin-bottom: 30px;
 }
 
 .b3 {
-    background-image: linear-gradient(210deg, rgb(253, 163, 52) 0%, #FFD75B 100%);
-    box-shadow: 0px 2px 12px rgba(253, 163, 52, 0.5);
+    background-image: linear-gradient(210deg, rgb(159, 152, 255) 0%, rgb(190, 187, 254) 100%);
+    box-shadow: 0px 2px 12px rgba(159, 152, 255, 0.5);
     margin-bottom: 0;
 }
 
 #q1 {
     padding-top: 65px;
+}
+
+.printer,
+.material {
+    display: none;
+}
+
+.printer {
+    min-height: 100%;
+    padding: 20px;
+    background-image: linear-gradient(210deg, rgb(62, 170, 255) 0%, #61E4FF 100%);
+}
+
+.printer .title,
+.material .title {
+    margin-top: 50px;
+    padding: 17px;
+    background: #fff;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+
+.printer .nav {
+    margin-top: 20px;
+    background: #fff;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+}
+
+.printer .nav img {
+    width: 100%;
+    object-fit: contain;
+    border-radius: 15px;
+}
+
+.printer .info,
+.material .info {
+    margin-top: 20px;
+    box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    background: #fff;
+}
+
+.printer .info .line,
+.material .info .line {
+    padding: 17px;
+    font-size: 1.2rem;
+    word-break: break-all;
+    position: relative;
+}
+
+.printer .info .line:after,
+.material .info .line:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: #ddd;
+    bottom: 0;
+    left: 0;
+}
+
+.printer .info .line:last-child:after,
+.material .info .line:last-child:after {
+    display: none;
+}
+
+.printer-list .list,
+.material-list .list {
+    margin-top: 50px;
+}
+
+.printer-list .list .name,
+.material-list .list .name {
+    background: #fff;
+    font-size: 1.1rem;
+    word-break: break-all;
+    position: relative;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    height: 80px;
+    box-sizing: border-box;
+}
+
+.printer-list .list .name .left,
+.material-list .list .name .left {
+    float: left;
+    width: 70%;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translate(0, -50%);
+}
+
+.printer-list .list .name .right {
+    overflow: hidden;
+    width: 30%;
+    height: 100%;
+}
+
+.printer-list .list .name .right img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 15px;
+}
+
+.printer-list .list .name:after,
+.material-list .list .name:after {
+    display: none;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 15px;
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.printer-list .list .name:active:after,
+.material-list .list .name:active:after {
+    display: block;
+}
+
+.material {
+    min-height: 100%;
+    padding: 20px;
+    background-image: linear-gradient(210deg, rgb(76, 140, 240) 0%, rgb(136, 183, 255) 100%);
+}
+
+.material .mtips {
+    background: #fff;
+    padding: 10px;
+    text-align: center;
+    font-size: 0.9rem;
+    border-radius: 15px;
+}
+
+.material-list .list .name .left {
+    width: 100%;
+}
+
+.active {
+    display: block;
+}
+
+.disactive {
+    display: none;
 }
