--- a/static/css/main.css
+++ b/static/css/main.css
@@ -225,6 +225,8 @@ html {
     width: 100%;
     text-align: center;
     box-sizing: border-box;
+    background: #fff470;
+    box-shadow: 0 2px 15px rgba(100, 100, 10, 0.2);
 }
 
 .restart {
@@ -241,7 +243,7 @@ html {
 .backmateriallist {
     top: 0px;
     left: 0;
-    border-bottom: 1px solid rgb(220, 220, 220);
+    /* border-bottom: 1px solid rgb(220, 220, 220); */
     z-index: 610;
     border-radius: 0 0 30px 30px;
 }
@@ -251,7 +253,7 @@ html {
 .backstartmenu:active,
 .backprinterlist:active,
 .backmateriallist:active {
-    background: rgb(243, 243, 243);
+    background: #fff697;
 }
 
 .noselect {
@@ -627,6 +629,10 @@ html {
 
 .material-list .list .name .left {
     width: 100%;
+}
+
+#wewinphone {
+    color: rgb(56, 56, 56);
 }
 
 .active {
