--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/jquery.min.js"></script>
-    <title>打印机标签问题筛选展示</title>
+    <title>结果展示</title>
 </head>
 
 <body>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="tips bw" style="text-align: center">
-                    <div>若您均未使用以上产品，欢迎致电：023-63075555</div>
+                    <div>若您均未使用以上产品，欢迎致电：<a id="wewinphone" href="tel:023-63075555">023-63075555</a></div>
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@
             <div class="tags" id="images"></div>
             <div class="tips bw">
                 <div>注意：*RD=红色、YL=黄色、BL=蓝色、GR=绿色、SL=银色。 </div>
-                <div>确认型号过后或者有任何疑问可以直接联系对应省份的助理哟：023-63075555。</div>
+                <div>确认型号过后或者有任何疑问可以直接联系对应省份的助理哟：<a id="wewinphone" href="tel:023-63075555">023-63075555</a>。</div>
                 <div>没有图片的型号不是常用型号，可能会没有库存。</div>
             </div>
         </div>
