--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -36,7 +36,7 @@
             <div class="btn b2">材质介绍</div>
             <div class="btn b3">标签选型</div>
         </div>
-        <div class="appaddress">www.wewin.com.cn</div>
+        <div class="appaddress"><a id="wewinphone" href="http://www.wewin.com.cn" target="_blank">www.wewin.com.cn</a></div>
     </div>
 
     <!-- 打印机介绍 -->
