--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -51,6 +51,11 @@
                     </div>
                 </div> -->
             </div>
+            <div class="tips bw childtips" style="text-align: center">
+                <div>如您还有其它疑问，欢迎致电：
+                    <a id="wewinphone" href="tel:023-63075555">023-63075555</a>
+                </div>
+            </div>
         </div>
         <div class="printer-info disactive">
             <div class="backprinterlist">返回</div>
@@ -64,6 +69,11 @@
                         <b>型号</b>：C20</div>
                 </div> -->
             </div>
+            <div class="tips bw childtips" style="text-align: center">
+                <div>如您还有其它疑问，欢迎致电：
+                    <a id="wewinphone" href="tel:023-63075555">023-63075555</a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -76,6 +86,11 @@
                     <div class="left">PP合成纸（聚丙烯）</div>
                 </div> -->
             </div>
+            <div class="tips bw childtips" style="text-align: center">
+                <div>如您还有其它疑问，欢迎致电：
+                    <a id="wewinphone" href="tel:023-63075555">023-63075555</a>
+                </div>
+            </div>
         </div>
         <div class="material-info disactive">
             <div class="backmateriallist">返回</div>
@@ -84,6 +99,11 @@
                 <div class="info">
                     <div class="line"><b>型号</b>：C20</div>
                 </div> -->
+            </div>
+            <div class="tips bw childtips" style="text-align: center">
+                <div>如您还有其它疑问，欢迎致电：
+                    <a id="wewinphone" href="tel:023-63075555">023-63075555</a>
+                </div>
             </div>
         </div>
     </div>
