--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/jquery.min.js"></script>
-    <title>结果展示</title>
+    <title>we查助手</title>
 </head>
 
 <body>
