--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -172,6 +172,7 @@
         </div>
     </div>
 
+    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
     <script src="/js/main.js"></script>
 </body>
 
