--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -121,32 +121,40 @@
                     <div class="answer a1 q1">
                         <div class="left">A.</div>
                         <div class="middle">
-                            <img style="width:50%;float:left" src="/img/p30.jpg" alt="">
-                            <img style="width:50%;" src="/img/c10.jpg" alt="">
+                            <img style="width:50%;float:left" src="/img/main/p30.jpg" alt="">
+                            <img style="width:50%;" src="/img/main/c10.jpg" alt="">
                         </div>
                         <div class="right rv-center p30">P30/C10系列</div>
                     </div>
                     <div class="answer a2 q1">
                         <div class="left">B.</div>
                         <div class="middle">
-                            <img style="width:50%;float:left" src="/img/p50.png" alt="">
-                            <img style="width:50%;" src="/img/h50.jpg" alt="">
+                            <img style="width:50%;float:left" src="/img/main/p50.png" alt="">
+                            <img style="width:50%;" src="/img/main/h50.jpg" alt="">
                         </div>
                         <div class="right rv-center p50">P50/P1200/M20T/C20/V200A/H50系列</div>
                     </div>
                     <div class="answer a3 q1">
                         <div class="left">C.</div>
                         <div class="middle">
-                            <img src="/img/taishi.jpg" alt="">
+                            <img src="/img/main/taishi.jpg" alt="">
                         </div>
                         <div class="right rv-center taishi">台式打印机系列</div>
                     </div>
                     <div class="answer a4 q1">
                         <div class="left">D.</div>
                         <div class="middle">
-                            <img src="/img/zhengka.jpg" alt="">
+                            <img style="width:50%;float:left" src="/img/main/zhengka.jpg" alt="">
+                            <img style="width:50%;" src="/img/main/cp50c.png" alt="">
                         </div>
                         <div class="right rv-center zhengka">证卡打印机系列</div>
+                    </div>
+                    <div class="answer a5 q1">
+                        <div class="left">E.</div>
+                        <div class="middle">
+                            <img src="/img/main/cp50cr.png" alt="">
+                        </div>
+                        <div class="right rv-center rfid">RFID电子标签打印机</div>
                     </div>
                 </div>
                 <div class="tips bw" style="text-align: center">
