--- a/static/css/main.css
+++ b/static/css/main.css
@@ -301,6 +301,7 @@ html {
     0% {
         margin-top: -10px;
     }
+
     100% {
         margin-top: 0;
     }
@@ -350,9 +351,11 @@ html {
         width: 45%;
         text-align: right;
     }
+
     .result .tags .tag img {
         right: 35%;
     }
+
     .bw {
         text-align: center;
     }
@@ -391,6 +394,7 @@ html {
         opacity: 0;
         top: 22%;
     }
+
     100% {
         opacity: 1;
         top: 25%;
@@ -421,6 +425,7 @@ html {
         opacity: 0;
         bottom: 0px;
     }
+
     100% {
         opacity: 1;
         bottom: 15px;
@@ -600,6 +605,9 @@ html {
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
+    padding-left: 3px;
+    padding-right: 3px;
+    box-sizing: border-box;
 }
 
 .printer-list .list .name .right {
