--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -154,7 +154,7 @@
                         <div class="middle">
                             <img src="/img/main/cp50cr.png" alt="">
                         </div>
-                        <div class="right rv-center rfid">RFID电子标签打印机</div>
+                        <div class="right rv-center rfid">RFID电子标牌打印机</div>
                     </div>
                 </div>
                 <div class="tips bw" style="text-align: center">
